# NXP-Raspberry-Pi-p2p-Demo

./: README.md  Readme.txt
source/: CMakeLists.txt  SnepClient.c  SnepClient.h  main.c  ndef_message.c  ndef_message.h
source/NxpRdLib_PublicRelease/comps/phCidManager/src/: phCidManager.c
source/NxpRdLib_PublicRelease/comps/phKeyStore/src/: phKeyStore.c  phKeyStore_Int.h
source/NxpRdLib_PublicRelease/comps/phLog/src/: phLog.c  phLog_Int.h
source/NxpRdLib_PublicRelease/comps/phOsal/src/: phOsal.c
source/NxpRdLib_PublicRelease/comps/phTools/src/: phTools.c
source/NxpRdLib_PublicRelease/comps/phacDiscLoop/src/: phacDiscLoop.c
source/NxpRdLib_PublicRelease/comps/phalMfc/src/: phalMfc.c  phalMfc_Int.c  phalMfc_Int.h
source/NxpRdLib_PublicRelease/comps/phalMfdf/src/: phalMfdf.c  phalMfdf_Int.c  phalMfdf_Int.h
source/NxpRdLib_PublicRelease/comps/phalMful/src/: phalMful.c  phalMful_Int.c  phalMful_Int.h
source/NxpRdLib_PublicRelease/comps/phbalReg/src/: phbalReg.c
source/NxpRdLib_PublicRelease/intfs/: phCidManager.h  phKeyStore.h  phLog.h  phOsal.h  phTools.h  phacDiscLoop.h  phalMfc.h  phalMfdf.h  phalMful.h  phbalReg.h  phhalHw.h  phhalHw_Rc523_Cmd.h  phhalHw_Rc523_Reg.h  phhalHw_Rc663_Cmd.h  phhalHw_Rc663_Reg.h  phlnLlcp.h  phpalFelica.h  phpalI14443p3a.h  phpalI14443p3b.h  phpalI14443p4.h  phpalI14443p4a.h  phpalI18092mPI.h  phpalMifare.h
source/NxpRdLib_PublicRelease/types/: ph_NxpBuild.h  ph_RefDefs.h  ph_Status.h  ph_TypeDefs.h
source/ctable/: c_table.h  c_tablegif.h  c_tablejpg_NXP_logo.h  c_tablepng.h  c_tablepng_NXP_QR.h  c_tabletxt.h
(+96 files in other folders)
